<?xml version="1.0"?>
<package>
  <name>amcl_python</name>
  <version>0.0.0</version>
  <description>The amcl_python package</description>

  <maintainer email="zhihao@iscas.ac.cn">zhihao xu</maintainer>

  <license>TODO</license>

  <author email="zhihao@iscas.ac.cn">zhihao xu</author> 

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
