<?xml version="1.0"?>
<package>
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>The robot_bringup package</description>

  <maintainer email="turtlebot2@todo.todo">turtlebot2</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
