<?xml version="1.0"?>
<package>
  <name>viechle_urdf</name>
  <version>0.0.0</version>
  <description>The viechle_urdf package</description>
  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
   <build_depend>tf</build_depend>
  
  <run_depend>tf</run_depend> 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>

</package>
